[package]
name = "ssapi-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0.111"
csv = "1.3.0"
tracing = "0.1.40"
